--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <script src="/jquery-1.8.3.js"></script>
 <script src="/bubblechart.js"></script>
 <link href="/style.css" rel="stylesheet" type="text/css"></style>
+<head>
+<title>Test wicket takers for Australia</title>
+</head>
 <body>
+<h1>Top 100 Test wicket-takers for Australia</h1>
 <script src="/data.js"></script>
 <script src="/index.js"></script>
 </body>
